--- a/APReactPortfolio/src/components/navbar/navbar.css
+++ b/APReactPortfolio/src/components/navbar/navbar.css
@@ -1,3 +1,98 @@
 .navbar {
     color: white;
+    height: 5rem;
+    width: 100vw;
+    max-width: 100vw;
+    margin: 0 auto;
+    padding: 1rem 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: sticky;
+    top: 0;
+    z-index: 3;
+}
+
+.logo {
+    object-fit: cover;
+    height: 5rem;
+    margin-top: 2rem;
+}
+
+.desktopMenuListItem {
+    margin: 2rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.25rem;
+    cursor: pointer;
+}
+
+.desktopMenuListItem:hover {
+    color: lightblue;
+    padding-bottom: 0.25rem;
+    border-bottom: 2px solid lightblue;
+}
+
+.desktopMenuBtn {
+    background: white;
+    color: black;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 1rem;
+    border-radius: 2rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.25rem;
+}
+
+.desktopMenuImage {
+    object-fit: cover;
+    height: 1rem;
+    width: 1rem;
+    margin: 1rem;
+}
+
+.active {
+    color: lightblue;
+    padding-bottom: 0.25rem;
+    border-bottom: 2px solid lightblue;
+}
+
+.hamenu {
+    display: none;
+    object-fit: cover;
+    height: 5rem;
+}
+
+.navMenu {
+    position: absolute;
+    top: 4rem;
+    right: 2rem;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+    height:fit-content;
+    min-width: 15rem;
+    background: rgb(40, 40, 40);
+    border-radius: 1rem;
+}
+
+.listItem {
+    color: white;
+    padding: 0.5rem 3rem;
+    margin: 0.25rem;
+    background: rgb(30, 30, 30);
+}
+
+@media screen and (max-width:720px) {
+    .hamenu {
+        display: flex;
+    }
+    .desktopMenu {
+        display: none;
+    }
+    .desktopMenuBtn {
+        display: none;
+    }
 }
