--- a/APReactPortfolio/src/components/footer/footer.css
+++ b/APReactPortfolio/src/components/footer/footer.css
@@ -1,8 +1,17 @@
 .footer {
+    width: 100vw;
+    height: 4rem;
     background: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 300;
+    font-size: 1.5rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 300;
 }
 
 .github {
-    height: 5px;
-    width: 5px;
+    height: 2px;
+    width: 2px;
 }
