--- a/APReactPortfolio/src/components/about/about.css
+++ b/APReactPortfolio/src/components/about/about.css
@@ -25,7 +25,11 @@
 }
 
 .introName {
-    color: lightblue
+    color: lightblue;
+}
+
+.title {
+    color: lightblue;
 }
 
 .btn {
@@ -37,9 +41,6 @@
 }
 
 @media screen and (max-width:840px) {
-    .me {
-        
-    }
     .introContent {
         font-size: 10vw;
     }
