--- a/APReactPortfolio/src/components/projects/projects.css
+++ b/APReactPortfolio/src/components/projects/projects.css
@@ -35,7 +35,7 @@
 }
 
 .link {
-    color: white !important;
+    color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.5rem;
     display: block;
