--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -12,3 +12,10 @@
     align-items: center;
     justify-content: center;
 }
+
+@media screen and (max-width:600px) {
+    .pdf-container {
+        width: 95%;
+        margin: .5rem;
+    }
+}
