--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -25,6 +25,7 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.25rem;
     cursor: pointer;
+    color: white;
 }
 
 .desktopMenuListItem:hover {
